<resources>
    <string name="app_name">Keppel</string>
    <string name="capture">Capture</string>
    <string name="place_finger">Place finger on scanner</string>
    <string name="connect_scanner">Connect scanner</string>
    <string name="open_source_libraries">Open source libraries</string>
    <string name="open_source_libraries_description">Libraries used to build Keppel and their licenses</string>
    <string name="change_scanner">Change scanner</string>
    <string name="app_version">App version</string>
    <string name="match">Match</string>
    <string name="input_error">Input template is not in the correct format!</string>
    <string name="no_capture_result_error">No capture result from scanner!</string>
    <string name="connection_failure_error">An error occurred connecting to the fingerprint scanner. Please try one of the following:\n\n(1) For built-in fingerprint scanners, press the power button momentarily to put the tablet to sleep, and then press it again to wake up the tablet again.\n\n(2) For external USB scanners, disconnect and reconnect the USB cable going to the scanner.
If the problem persists, please restart the tablet.</string>
    <string name="input_missing_error">\"%1$s\" is missing!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="scanner_connected">USB scanner connected</string>
    <string name="test_scanner">Test scanner</string>
    <string name="scanner_test_success">"Scanner captured fingerprint successfully! "</string>
    <string name="hex_encoded_template">Hex encoded template:</string>
    <string name="nfiq">NFIQ:</string>
    <string name="shortened_template">…%1$s…</string>
</resources>
